- fixed margins and spacing

--- a/src/components/bookingSummaryCard/BookingSummaryCard.scss
+++ b/src/components/bookingSummaryCard/BookingSummaryCard.scss
@@ -32,6 +32,10 @@
 		margin-top: 16px;
 	}
 
+	.taxIcon {
+		padding: 2px 10px;
+	}
+
 	.totalTax {
 		justify-self: flex-end;
 	}
@@ -40,7 +44,7 @@
 		background-color: #f8f8f8;
 		border-radius: 20px;
 		padding: 16px;
-		margin: 20px auto;
+		margin-top: 20px;
 	}
 
 	.light {
